# arr-coc-0-1

./: .gitignore  CLAUDE.md  README.md  SETUP.md  requirements.txt
.claude/agents/: oracle-knowledge-runner.md
.serena/: project.yml
ARR_COC/: __init__.py  attending.py  balancing.py  integration.py  knowing.py  texture.py
ARR_COC/Training/: .training.starter  README.md  train.py
CLI/: cli.py  tui.py
CLI/config/: constants.py  gcp-manifest.json
CLI/home/: screen.py
CLI/infra/: __init__.py  core.py  screen.py
CLI/launch/: build_queue_monitor.py  constants.py  core.py  runner_cleanup.py  runner_diagnostics.py  screen.py  validation.py
CLI/monitor/: core.py  core_formatters.py  screen.py  table_helpers.py
CLI/setup/: core.py  pricing_setup.py  screen.py  steps.py
CLI/shared/: __init__.py  animated_spinner.py  api_helpers.py  auto_performance_reporter.py  base_screen.py  build_pool_trace.py  callbacks.py  cool_spinner.py  datatable_info_popup.py  infra_print.py  infra_verify.py  log_paths.py  machine_selection.py  performance_analyzer.py  performance_monitor.py  retry.py  safe_json.py  session_metrics.py  setup_helper.py  steven_toasts.py  stevens_dance.py  timing.py  types.py  vervaekean_exit_summary.py  wandb_helper.py
CLI/teardown/: core.py  pricing_teardown.py  screen.py  steps.py
CLI/unit/: __init__.py  test_all.py
HFApp/: README.md  app.py  art.py
HFApp/microscope/: README.md  __init__.py
Stack/: README.md
Stack/arr-trainer/: .image-manifest  Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml
(+2863 files in other folders)
